--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,48 @@
-.article {
-    border: 1px solid  #ffdead;
-    color: goldenrod;
+body {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-#intro {
-    font-size: 3em;
+.site-content {
+    min-height: calc(100vh - 50px);
+   
+}
+
+.main {
+    width: 85%;
+    margin: 0 auto;
+}
+
+.navigation {
+    background-color: slategray;
+    padding: .5em 0 .5em;
+}
+
+.navigation ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: .15em;
+}
+
+li a, .navbar-brand {
+    text-decoration: none;
+    margin: .1em ;
+    padding-left: .25em;
+    border-left: 1px solid white;
+    color: white;
+}
+
+.header-list li {
+    display: inline-block;
+    margin: 4px;
+}
+
+.footer {
+    height: 40px;
+    margin: .5em;
+}
+
+article {
+
 }
