--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .site-content {
-    min-height: calc(100vh - 85px);
+    min-height: calc(100vh - 93px);
    
 }
 
@@ -50,16 +50,19 @@ footer {
 
 footer p {
     color:#E3E3E3;
-    margin-bottom: .2em;
+    padding-top: 0;
+    padding-bottom: .3em;
 }  
 
-
+.contact-page {
+    max-width: 75%;
+}
 .fa {
     font-size: 2em;
     width: .9em;
     text-align: center;
     text-decoration: none;
-    margin: 8px 2px;
+    margin: .5em .1em;
     color: #E3E3E3;
 }
   
@@ -76,7 +79,17 @@ footer p {
     transition: all ease 0.3s;
 }
   
+.contact-table td {
+    padding-left: 1em;
+}
+
+.contact-table th,
+.contact-page td {
+    padding-top: .5em;
+    padding-bottom: .5em;
+}
 
 .img-shadow {
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
+
