--- a/styles.css
+++ b/styles.css
@@ -93,3 +93,8 @@ footer p {
 .img-shadow {
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
+
+#bio {
+    max-width: 90%;
+    font-size: 1.1em;
+}
