set up page to populate blogs from the local storage database. added css styling to blog page.

--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@ footer p {
     padding-bottom: .3em;
 }  
 
-.blog-entries-list {
-    font-size: .75em;
+#blog-entries-list {
+    font-size: .85em;
 }
 
 .fa {
@@ -94,3 +94,13 @@ footer p {
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
+.blog-subheading {
+    color: rgb(136, 136, 136);
+    font-size: .9em;
+}
+
+.special-text {
+    font-size: .9em;
+    font-style: italic;
+    margin-left: .5em;
+}
