--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,10 @@ footer p {
     font-size: 1.2em;
 }
 
+.contacts img {
+    margin-right: 10px;
+}
+
 .img-shadow {
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
