--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ footer p {
     font-size: 1.1em;
 }
 
-.blog-subheading {
+.blog-subheading, .blog-tags {
     color: rgb(136, 136, 136);
     font-size: .9em;
 }
