--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,89 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin-top: 50px;
-    position: relative;
+    /* position: relative; */
     background-color: #C5C1C0;
     color: #575757;
+    /* Added the below in redesign */
+    height: 100%;
+    width: 100%;
 }
 
-.site-content {
+/* .site-content {
     min-height: calc(100vh - 105px);
-   
-}
+}  */
 
 .page-header {
     padding: 0;
 }
 
-.jumbo-style {
+
+
+header#intro {
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 50px);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-image: url('/images/header.jpg');
+    text-align: center;
+    color: white;
+    
+} 
+
+header .header-content {
+    position: relative;
+    text-align: center;
+    padding: 13em 15px 13em;
+    width: 100%;
+  }
+
+/* header .header-content {
+    position: relative;
+    height: 100%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 0 50px;
+  }
+
+header .header-content-inner {
+    padding-top: 250px;
+} */
+
+/* header .header-content {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 0 50px;
+  } */
+
+header .header-content-inner hr {
+    margin: .7em 19em;
+}
+
+header .header-content .header-content-inner h1 {
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 30px;
+}
+
+header .header-content .header-content-inner p {
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 16px;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+}
+
+/* .jumbo-style {
     margin-top: -30px;
     padding-left: 1.4em;
     padding-right: 1.4em;   
@@ -30,7 +98,7 @@ body {
     color: #E3E3E3;
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
     width:  
-}
+} */
 
 .navbar-header {
     margin-bottom: 0;
@@ -84,6 +152,13 @@ footer p {
     transition: all ease 0.3s;
 }
 
+/* #footer.homepage-footer {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+} */
+
 .contacts {
     font-size: 1.2em;
 }
@@ -97,8 +172,10 @@ footer p {
 }
 
 #bio {
-    max-width: 90%;
+    max-width: 1000px;
+    width: 90%;
     font-size: 1.1em;
+    padding: 50px 10px;
 }
 
 .blog-subheading {
