--- a/styles.css
+++ b/styles.css
@@ -126,12 +126,34 @@ header .header-content .header-content-inner p {
 #bio {
     /* width: 80%; Do I need this with .container tag?*/
     margin: 2em auto;
-    padding-bottom: 5em;
+    padding-bottom: 4em;
     font-size: 1.2em;
+}
+
+.footer-grid {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 25%;
+    grid-template-rows: 1fr;
+    justify-items: center;
+    justify-content: space-between;
+    grid-template-areas:
+    "footer-left . . footer-right"
+}
+
+#footer-left {
+    grid-area: footer-left;
+    justify-self: start;
+}
+
+#footer-right {
+    grid-area: footer-right;
+    justify-self: end;
 }
 
 
 footer {
+    
     background-color: #0A1612;
     color: white;
     padding-left: .75em;
@@ -172,12 +194,6 @@ footer p {
     transition: all ease 0.3s;
 }
 
-/* #footer.homepage-footer {
-    position: absolute;
-    bottom: 0;
-    height: 50px;
-    width: 100%;
-} */
 
 .contacts {
     font-size: 1.2em;
@@ -209,8 +225,22 @@ footer p {
     margin-left: .5em;
 }
 
-/* @media screen and (min-width: 250px) and (max-width: 900px){
-    #bio {
-        padding-bottom: 6em;
-    } */
+@media screen and (max-width: 430px){
+    .footer-grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+        "footer-right"
+        "footer-left"
+    }
 
+    #footer-left {
+        grid-area: footer-left;
+        justify-self: center;
+    }
+    
+    #footer-right {
+        grid-area: footer-right;
+        justify-self: center;
+    }
+}
