--- a/css/blog-styles.css
+++ b/css/blog-styles.css
@@ -12,3 +12,28 @@
     font-style: italic;
     margin-left: .5em;
 }
+
+.abridged {
+    height: 9em;
+    overflow: hidden;
+    margin-bottom: .3em;
+}
+
+.fullContent {
+    height: auto;
+}
+
+.hideElement {
+    display: none;
+}
+
+.expandContentBtn {
+    background-color: rgba(223, 223, 223, 0.623);
+    color: gray;
+    border-radius: 4px;
+    border: none;
+    padding-bottom: 0;
+    font-size: .9em;
+
+
+}
