--- a/admin/admin-styles.css
+++ b/admin/admin-styles.css
@@ -1,3 +1,9 @@
 .site-content {
     min-height: calc(100vh - 94px);
 }
+
+input, textarea {
+    display: block;
+    padding: .2em .2em 0;
+    margin: .3em 0;
+}
