--- a/admin/admin-styles.css
+++ b/admin/admin-styles.css
@@ -5,5 +5,16 @@
 input, textarea {
     display: block;
     padding: .2em .2em 0;
-    margin: .3em 0;
+    margin: 0 auto .8em;
+    width: 100%;
 }
+
+#admin-blog-entry {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+#admin-blog-entry label {
+    margin-bottom: .1em
+}
+
