--- a/admin/admin-styles.css
+++ b/admin/admin-styles.css
@@ -18,3 +18,11 @@ input, textarea {
     margin-bottom: .1em
 }
 
+#new-button {
+    max-width: 800px;
+    margin: .2em auto 0;
+}
+
+#btnToBlogs {
+    width: 80px;
+}
