--- a/blog/styles/blog-styles.css
+++ b/blog/styles/blog-styles.css
@@ -27,3 +27,16 @@
     padding-bottom: 0;
     font-size: .9em;
 }
+
+#blog-header {
+    margin-bottom: .9em;
+}
+
+#blog-search {
+    padding: 0 0 1em 1.1em;
+}
+
+.blog-search__input {
+    background-color: rgb(235, 235, 235);
+    width: 72%;
+}
