--- a/blog/styles/blog-styles.css
+++ b/blog/styles/blog-styles.css
@@ -1,3 +1,7 @@
+.site-content {
+    min-height: calc(100vh - 95px);
+}
+
 #blog-entries-list {
     font-size: .85em;
 }
@@ -33,10 +37,17 @@
 }
 
 #blog-search {
-    padding: 0 0 1em 1.1em;
+    padding: 0 0 1em;
 }
 
 .blog-search__input {
     background-color: rgb(235, 235, 235);
-    width: 72%;
+    width: 75%;
+}
+
+@media screen and (max-width: 768px) {
+    .blog-search__input {
+        width: 50%;
+    }
+    
 }
