refactored code for the 'no blogs found for search parameters' message. Moved it into the pagination code in an if statement before all the blog entries are placed in the DOM element.

--- a/blog/styles/blog-styles.css
+++ b/blog/styles/blog-styles.css
@@ -45,9 +45,19 @@
     width: 75%;
 }
 
+.form-control {
+    display: inline-block;
+    height: 28px;
+}
+
+label {
+    margin-bottom: 0;
+}
+
 @media screen and (max-width: 768px) {
     .blog-search__input {
         width: 50%;
     }
-    
+
+   
 }
