added browserify and started setting up one page website. Refactored contact, projects and resume pages as modules.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,6 +234,10 @@ footer p {
   #bio {
       padding-bottom: 0;
   }
+
+  .hidden {
+      display: none;
+  }
   
 @media screen and (max-width: 441px){
     .footer-grid {
