--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,27 +52,6 @@ header .header-content {
     width: 100%;
   }
 
-/* header .header-content {
-    position: relative;
-    height: 100%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    padding: 0 50px;
-  }
-
-header .header-content-inner {
-    padding-top: 250px;
-} */
-
-/* header .header-content {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    padding: 0 50px;
-  } */
 
 header .header-content-inner hr {
     margin: .7em auto;
@@ -94,17 +73,6 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     padding-bottom: 50px;
 }
-
-/* .jumbo-style {
-    margin-top: -30px;
-    padding-left: 1.4em;
-    padding-right: 1.4em;   
-    padding-bottom: 17px;
-    background-color: #1A2930;
-    color: #E3E3E3;
-    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
-    width:  
-} */
 
 .navbar-header {
     margin-bottom: 0;
@@ -206,8 +174,11 @@ footer p {
 }
 
 .invisible {
-    /* visibility: hidden; */
-    opacity: 0;
+    visibility: hidden;
+}
+
+.hidden {
+    display: none;
 }
 
 /* This changes overall look of form fields on site. Narrows the height and makes the form fields not display: block */
